cleaned up after bug 1700; generate a file:// URL based on a canonicalized path instead of fetching from class loader;
the class loader generates a JAR URL when loading the tests from the JAR during Hudson / maven / tycho tests;
this cannot properly be processed by TracTrac.